# inkview-rs-templates

./: .gitignore  LICENSE  README.md  cargo-generate.toml
.github/workflows/: ci.yml
template/: .gitignore  Cargo.toml  README.md  justfile  pb_build_and_deploy_ssh.sh
template/src/: main.rs
template/ui/: main.slint
