[package]
name = "pb-template"
version = "0.1.0"
edition = "2021"

license = "MIT"
keywords = ["inkview", "pocketbook", "eink"]

[dependencies]
inkview = { version = "0.3.0", default-features = false}
{% if framework == "slint" %}
inkview-slint = { version = "0.3.0", default-features = false}
slint = { version = "1.14.1", default-features = false, features = ["compat-1-2", "std", "software-renderer-systemfonts", "renderer-software"] }
euclid = "0.22.11"
rgb = "0.8.52"
{% elsif framework == "embedded-graphics" %}
inkview-eg = { version = "0.3.0", default-features = false}
embedded-graphics = "0.8.1"
embedded-graphics-core = "0.4.0"
anyhow = "1.0"
{% endif %}

{% if framework == "slint" %}
[build-dependencies]
slint-build = { version = "1.14.1" }
{% endif %}

[features]
default = ["sdk-6-10"]
sdk-6-5 = ["inkview/sdk-6-5"]
sdk-6-8 = ["inkview/sdk-6-8"]
sdk-6-10 = ["inkview/sdk-6-10"]

[profile.release]
opt-level = "s"
lto = true
strip = true
